box text finish

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
         }
 
         #canvas {
-            background-color: #797B78;
+            background-color: rgb(169, 170, 169);
         }
     </style>
 </head>
@@ -21,6 +21,7 @@
     <div>
         <input id="input" placeholder="Text here">
         <button id="goButton">GO</button>
+        <button id="saveButton">Save</button>
     </div>
     <canvas id="canvas"></canvas>
 
