--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <title>Persona 5</title>
     <style>
         #canvas {
-            background-color: rgb(169, 170, 169);
+            /* background-color: rgb(169, 170, 169); */
         }
     </style>
 </head>
